@@ -1,15 +1,21 @@
 package forge.view;
 
+import java.awt.Dimension;
 import java.awt.Image;
+
 import javax.swing.ImageIcon;
 import javax.swing.JLabel;
+import javax.swing.JOptionPane;
 import javax.swing.SpringLayout;
+
 import forge.gui.toolbox.FSkin;
 
 @SuppressWarnings("serial")
 public class FTitleBar extends FTitleBarBase {
+    private static final FSkin.SkinFont skinFont = FSkin.getFont(12);
+
     private final JLabel lblTitle = new JLabel();
-    
+
     public FTitleBar(ITitleBarOwner owner0) {
         super(owner0);
         skin.setMatteBorder(0, 0, 1, 0, bottomEdgeColor);
@@ -17,10 +23,10 @@ public class FTitleBar extends FTitleBarBase {
         setTitle(owner0.getTitle()); //set default title based on frame title
         setIconImage(owner0.getIconImage()); //set default icon image based on frame icon image
         FSkin.get(lblTitle).setForeground(foreColor);
-        FSkin.get(lblTitle).setFont(FSkin.getFont(12));
+        FSkin.get(lblTitle).setFont(skinFont);
         addControls();
     }
-    
+
     @Override
     protected void addControls() {
         add(lblTitle);
@@ -32,8 +38,9 @@ public class FTitleBar extends FTitleBarBase {
     @Override
     public void setTitle(String title) {
         this.lblTitle.setText(title);
+        updatePreferredSize();
     }
-    
+
     @Override
     public void setIconImage(Image image) {
         if (image != null) {
@@ -42,5 +49,15 @@ public class FTitleBar extends FTitleBarBase {
         else {
             this.lblTitle.setIcon(null);
         }
+        updatePreferredSize();
+    }
+
+    private void updatePreferredSize() {
+        int width = skinFont.measureTextWidth(JOptionPane.getRootFrame().getGraphics(), this.lblTitle.getText());
+        if (this.lblTitle.getIcon() != null) {
+            width += this.lblTitle.getIcon().getIconWidth() + this.lblTitle.getIconTextGap();
+        }
+        width += btnClose.getPreferredSize().width;
+        this.setPreferredSize(new Dimension(width + 10, visibleHeight));
     }
 }
